# hysail

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  payload_metadata.pkl  pyproject.toml  result.txt
.github/: copilot-instructions.md
.github/workflows/: build-hysail-release.yaml  build-test-hysail.yaml
dapp/: .gitignore  README.md
dapp/apps/web/: index.html  package-lock.json  package.json  vite.config.js
dapp/contracts/: hardhat.config.js  package-lock.json  package.json
dapp/contracts/cache/: solidity-files-cache.json
dapp/contracts/contracts/: DownloadManager.sol  FileRegistry.sol  ProviderRegistry.sol
dapp/contracts/scripts/: deploy.js
dapp/contracts/test/: DownloadManager.js
dapp/services/provider_mock/: main.py  provider_mock.py
dapp/services/reconstructor/: abi.py  constants.py  main.py  models.py  reconstructor.py  (+2 more)
doc/: README.md  dapp_architecture.md  reconstructor.md
examples/: lorem_ipsum.txt  server_list_example.json
hysail/: check_block.py  constant.py  hysail.py  hysail_decode.py  hysail_encode.py  lt_code.py  test.py
hysail/audit/: audit.py
hysail/chain/: __init__.py  manifest.py  publisher.py
hysail/encryption/: block.py  decode.py  encode.py  encoding_metadata.py  local_mac.py
hysail/logger/: basic_logger.py  execution_logger.py  logger.py  progress.py
hysail/server/: audit.py  packet_saver.py  server.py
hysail/tests/: dummy.py  hysail_chain_test.py  hysail_cli_test.py  hysail_progress_test.py  hysail_test.py  lt_decode_test.py  lt_encode_test.py
hysail/utils/: debug.py  decorators.py  galois.py  operators.py  padding.py
scripts/: cache.sh  format.sh  run.ps1  start.ps1  start.sh
(+15 files in other folders)
