[build-system]
requires = ["hatchling==1.2.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "hysail",
]

[tool.hatch.build]
include = ["hysail/**/*.py"]

[project]
name = "hysail"
version = "0.0.1"
authors = [
    {name = "ualivent", email="ualivent@gmail.com"}
]
maintainers = [
    {name = "ualivent", email="ualivent@gmail.com"}
]
description = "HySail protocol"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "black==24.8.0",
    "flake8==7.0.0",
    "typer==0.12.5",
    "rich==13.9.1",
    "pytz==2024.2",
    "lt-code==0.3.3",
]

[project.scripts]
hysail = "hysail.hysail:main"
